GNOME Bugzilla – Bug 757928
audio-quantize: Fix dither_buffer memory leak
Last modified: 2015-11-11 14:02:16 UTC
running elements/adder tests with valgrind results in following leak ==21674== 88,200 bytes in 2 blocks are definitely lost in loss record 2,394 of 2,394 ==21674== at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so) ==21674== by 0x402E3AF: realloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so) ==21674== by 0x42A7CB8: g_realloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==21674== by 0x51E4898: setup_dither_buf (audio-quantize.c:125) ==21674== by 0x51E4961: gst_audio_quantize_quantize_int_dither_none (audio-quantize.c:171) ==21674== by 0x51E5145: gst_audio_quantize_samples (audio-quantize.c:498) ==21674== by 0x51E3433: gst_audio_converter_samples (audio-converter.c:479) ==21674== by 0x52400FD: gst_audio_convert_transform (gstaudioconvert.c:738) ==21674== by 0x4076666: default_generate_output (gstbasetransform.c:2180) ==21674== by 0x407913C: gst_base_transform_chain (gstbasetransform.c:2333) ==21674== by 0x412F8C7: gst_pad_push_data (gstpad.c:4108) ==21674== by 0x4138476: gst_pad_push (gstpad.c:4479) ==21674== by 0x4071652: gst_base_src_loop (gstbasesrc.c:2845) ==21674== by 0x41669D8: gst_task_func (gsttask.c:331) ==21674== by 0x4167B7E: default_func (gsttaskpool.c:68) ==21674== by 0x42C9404: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==21674== by 0x42C89A9: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==21674== by 0x436DF6F: start_thread (pthread_create.c:312) ==21674== by 0x446FBED: clone (clone.S:129)
Created attachment 315228 [details] [review] fix buffer leak
commit b61e1465b79c9c8ed5057b5dcc73e443fd3cce06 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Wed Nov 11 15:02:39 2015 +0900 audio-quantize: Fix dither_buffer memory leak https://bugzilla.gnome.org/show_bug.cgi?id=757928