audio-quantize: Fix dither_buffer memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=757928